plugins {
    id 'java'
}

group = 'pw.aru.libs'
version = '1.0-SNAPSHOT'
sourceCompatibility = 11

repositories {
    jcenter()
}

dependencies {
    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
    compileOnly 'org.immutables:value-annotations:2.7.5'
    annotationProcessor 'org.immutables:value:2.7.5'

    implementation 'io.projectreactor:reactor-core:3.2.8.RELEASE'
    implementation 'pw.aru.libs:eventpipes:1.2'
    implementation 'com.sedmelluq:lavaplayer:1.3.11'
    implementation 'org.json:json:20180813'
    implementation 'org.slf4j:slf4j-api:1.7.26'
}